# financeapi

./: Cargo.toml  README.md
examples/: simple.rs
src/: autocomplete.rs  error.rs  lib.rs  quote.rs
