[package]
name = "financeapi"
version = "0.1.1"
edition = "2021"
authors = ["Carlo Caione <carlo.caione@gmail.com>"]
description = "A Rust API for financeapi.net"
readme = "README.md"
repository = "https://github.com/carlocaione/financeapi"
license = "MIT OR Apache-2.0"
keywords = ["finance", "stock", "ETF", "quote"]
categories = ["api-bindings", "finance"]

[dependencies]
const_format = "0.2.32"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros"] }
url = "2.5.0"
